[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "runner",
    "runner/macros",
    "setup",
    "aoc_lib"
]

[workspace.dependencies]
linkme = "0.3.18"
aoc_lib = {path = "aoc_lib"}

[dependencies]
itertools = "0.12.0"
linkme.workspace = true
peg = "0.8.2"
runner = {path = "./runner"}
